syntax = "proto3";

//option go_package = "path;name";
//path 表示生成的go文件的存放地址，会自动生成目录的。
//name 表示生成的go文件所属的包名
option go_package="./;proto";
// 定义包名
package proto;
import "google/protobuf/timestamp.proto"; 


// 定义消息
message UserData {
  // 字段
int32 userid = 1;
}

message Group
    {  
    int32 id = 1;  
    string uuid = 2;  
    int32 creater_id = 3;  
    string creater_name = 4;  
    string group_name = 5;  
    string avatar = 6;  
    int32 grade = 7;  
    int32 member_count = 8;
    google.protobuf.Timestamp created_at = 9;  
    google.protobuf.Timestamp deleted_at = 10;  
    google.protobuf.Timestamp updated_at = 11;  
}  
    
message GroupMessage {  
    int32 id = 1;  
    int32 user_id = 2;  
    string user_uuid = 3;  
    string user_name = 4;  
    int32 group_id = 5;  
    string msg = 6;  
    int32 msg_type = 7;  
    bool is_reply = 8;  
    int32 reply_user_id = 9;  
    bytes context = 10;  
    google.protobuf.Timestamp created_at = 11;  
    google.protobuf.Timestamp deleted_at = 12;  
    google.protobuf.Timestamp updated_at = 13;  
}  
    
message GroupDetail {  
    Group group_info = 1;  
    repeated GroupMessage message_list = 2;  
}


message UserGroupList {
    repeated GroupDetail group_detail = 1;
}

// 定义login服务
service login {
    // 定义GetUserGroupList方法，接受UserData消息， 并返回UserGroupList消息
rpc GetUserGroupList (UserData) returns (UserGroupList) {}
}

// // 定义HelloReply消息
// message UserGroupList {
//   // message字段
//   repeated GroupDetail groupdetail = 2;
// }